# otp

./: .clang-format  .editorconfig  otp.sublime-project
scripts/: build_debug.sh  build_release.sh  create_xcode_project.sh  run_clang_tidy.sh
src/: CMakeLists.txt
src/decrypt/: CMakeLists.txt  decrypt.cc
src/encrypt/: CMakeLists.txt  encrypt.cc
src/genotp/: CMakeLists.txt  genotp.cc
src/otp/: CMakeLists.txt  otp.cc  otp.h  otp_bench.cc  otp_macros.h  otp_test.cc
src/otpdecrypt/: CMakeLists.txt  otpdecrypt.cc
src/otpencrypt/: CMakeLists.txt  otpencrypt.cc
src/otpgen/: CMakeLists.txt  otpgen.cc
