CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(otp)
SET(OTP_VERSION_MAJOR 0)
SET(OTP_VERSION_MINOR 1)
SET(OTP_VERSION_PATCH 0)

SET(CMAKE_CXX_FLAGS_COMMON
    "-std=c++14 \
    -Wall \
    -Wextra \
    -Werror")
SET(CMAKE_CXX_FLAGS_DEBUG
    "${CMAKE_CXX_FLAGS_DEBUG} \
    ${CMAKE_CXX_FLAGS_COMMON}")
SET(CMAKE_CXX_FLAGS_RELEASE
    "${CMAKE_CXX_FLAGS_RELEASE} \
    ${CMAKE_CXX_FLAGS_COMMON}")

ADD_SUBDIRECTORY(vendor/googlebenchmark)
ADD_SUBDIRECTORY(vendor/googlelog)
ADD_SUBDIRECTORY(vendor/googletest)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${GBENCH_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

LINK_DIRECTORIES(${GLOG_LINK_DIRS})

ENABLE_TESTING()
ADD_SUBDIRECTORY(decrypt)
ADD_SUBDIRECTORY(encrypt)
ADD_SUBDIRECTORY(genotp)
ADD_SUBDIRECTORY(otp)
